# ece-test-harness

./: .gitignore  Dockerfile  LICENSE  README.md  lint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
grader_examples/: template1.jl  template1.m  template1.py  template1_blacklisted.jl  template1_blacklisted.py  template1_buggy.jl  template1_buggy.py  template1_grader.jl  template1_grader.m  template1_grader.py  template1_sol.jl  template1_sol.m  template1_sol.py  template2.jl  template2.m  template2.py  template2_buggy.py  template2_grader.jl  template2_grader.m  template2_grader.py  template3.jl  template3.m  template3.py  template3_buggy.jl  template3_buggy.py  template3_grader.jl  template3_grader.m  template3_grader.py  template3_sol.jl  template3_sol.m  template3_sol.py  template3lib.jl  template3lib.m  template3lib.py  template4.jl  template4.m  template4.py  template4_buggy.jl  template4_buggy.py  template4_grader.jl  (+5 more)
src/ece_test_harness/: graderutils.jl  graderutils.m  graderutils.py  init_projects.py  languages.py  main.py  test_solutions.py  utilities.py
src/ece_test_harness/scripts/: _ag_cli_http_client.py  _protocols.py  _requests_ag_client.py  _schedule.py  configure_projects.py  publish_projects.py  save_projects.py  test_solutions.py
tests/: test_configure_projects.py  test_grader.py  test_publish_projects.py  test_save_projects.py  test_test_solutions.py
tests/testdata/test_course_basic/: schedule.txt
tests/testdata/test_course_publish/: schedule.txt
tests/testdata/test_course_save/: schedule.txt
tests/testdata/test_course_save/course-configs/hw1.py/: agproject.yml
tests/testdata/test_course_save/course-configs/hw2.py/: agproject.yml
tests/testdata/test_course_solutions/: schedule.txt
