[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ece-test-harness"
version = "2026.4.1"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "requests",
    "autograder-cli",
]

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff"]

[project.scripts]
ece-grade = "ece_test_harness.main:main"
ece-configure-projects = "ece_test_harness.scripts.configure_projects:cli"
ece-save-projects = "ece_test_harness.scripts.save_projects:cli"
ece-test-solutions = "ece_test_harness.scripts.test_solutions:cli"
ece-publish-projects = "ece_test_harness.scripts.publish_projects:cli"

[tool.ruff]
line-length = 100
exclude = ["grader_examples/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ece_test_harness = ["*.jl", "*.m"]
